dando toques finales

--- a/estilos.css
+++ b/estilos.css
@@ -71,7 +71,7 @@ html{
 }
 .inicio .contenido-banner{
     padding: 20px;
-    background-color: #1e2326;
+    background-color: #1e2326be;
     max-width: 350px;
     margin: auto;
     text-align: center;
