--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -62,7 +62,7 @@ html{
 /*SECCION INICIO, BANNER, FOTO Y REDES*/
 .inicio{
     background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)),
-    url(img/laber.png);
+    url(../img/laber.png);
     background-size: cover;
     height: 100vh;
     color: #fff;
